load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "validate-yaml_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/scripts/validate-yaml",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_yaml_v3//:yaml_v3"],
)

go_binary(
    name = "validate-yaml",
    embed = [":validate-yaml_lib"],
    visibility = ["//visibility:public"],
)
