load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config-patterns_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/examples/config-patterns",
    visibility = ["//visibility:private"],
    deps = ["//pkg/ephemos"],
)

go_binary(
    name = "config-patterns",
    embed = [":config-patterns_lib"],
    visibility = ["//visibility:public"],
)
