load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "interceptors_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/examples/interceptors",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/proto",
        "//pkg/ephemos",
        "@org_golang_google_grpc//:grpc",
    ],
)

go_binary(
    name = "interceptors",
    embed = [":interceptors_lib"],
    visibility = ["//visibility:public"],
)
