load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "transport-agnostic_lib",
    srcs = ["main.go"],
    importpath = "github.com/sufield/ephemos/examples/transport-agnostic",
    visibility = ["//visibility:private"],
    deps = ["//pkg/ephemos"],
)

go_binary(
    name = "transport-agnostic",
    embed = [":transport-agnostic_lib"],
    visibility = ["//visibility:public"],
)
